Improved grid gutter media query integration

--- a/website/assets/sass/01-config-SASS/grid-settings.scss
+++ b/website/assets/sass/01-config-SASS/grid-settings.scss
@@ -13,6 +13,11 @@ $gutter-ieFallback: $CG-bodyInnerBG;
 //usage: class="grid grid--gutter-moduleName"
 $cellGutters: (
 	'moduleName' : 20px,
+	'mediaQueryFriendly' : (
+		50px, //*default*/
+		25px (max, bp('tablet')), //*affected by media query*/
+		10px (max, bp('mobile')) //*affected by media query*/
+	)
 );
 
 //Set the points at which columns change widths
