Download links added back into swordion

--- a/website/assets/sass/01-config-SASS/fonts-SASS/icon-names.scss
+++ b/website/assets/sass/01-config-SASS/fonts-SASS/icon-names.scss
@@ -30,38 +30,28 @@
 
 //list of icon names and they're reference keys
 $icons: (
+	search: "\e617",
+	arrow--down: "\e610",
+	arrow--left: "\e611",
+	arrow--right: "\e612",
+	arrow--up: "\e613",
+	facebook: "\e614",
+	fontsize: "\e615",
+	rtf: "\e616",
+	pdf: "\e600",
+	word: "\e601",
+	excel: "\e602",
+	powerpoint: "\e603",
+	hamburger: "\e604",
+	audio: "\e605",
+	podcast: "\e606",
+	globe: "\e607",
 	spinner: "\e609",
 	star--empty: "\e60a",
 	star--half: "\e60b",
 	star--full: "\e60c",
 	cross: "\e60d",
 	checkmark: "\e60e",
-	facebook--invert: "\e618",
+	external: "\e60f",
 	twitter: "\e608",
-	bothWays: "\e900",
-	gear: "\e901",
-	manInSpot: "\e902",
-	pieChart: "\e903",
-	presentation: "\e904",
-	tv--simple: "\e905",
-	question: "\e806",
-	tv: "\e805",
-	devices: "\e800",
-	meeting: "\e801",
-	review: "\e802",
-	strength: "\e803",
-	trophy: "\e804",
-	socialClub: "\e602",
-	group: "\e601",
-	share: "\e600",
-	twitter--outline: "\e60f",
-	external: "\e61a",
-	radio: "\e61b",
-	email: "\e619",
-	facebook: "\e614",
-	search: "\e617",
-	arrow--down: "\e610",
-	arrow--left: "\e611",
-	arrow--right: "\e612",
-	arrow--up: "\e613",
 );
