Got the theme styling working again

--- a/website/assets/sass/02-themes.scss
+++ b/website/assets/sass/02-themes.scss
@@ -60,7 +60,7 @@ $themes: (
 @each $theme, $elements in $themes {
 	body.theme--#{$theme} {
 		@each $class, $attributes in $elements {
-			.themed-#{$class} {
+			.theme__#{$class} {
 				@each $attribute, $value in $attributes {
 					#{$attribute}: $value;
 				}
@@ -70,6 +70,6 @@ $themes: (
 }
 
 	//optional: animate theme transitions :)
-[class^="themed-"], [class*=" themed-"]  { @include MG-animate(0.5s); }
+[class^="theme__"], [class*=" theme__"]  { @include MG-animate(0.5s); }
 
 
