--- a/website/assets/sass/01-config-SASS/grid-settings.scss
+++ b/website/assets/sass/01-config-SASS/grid-settings.scss
@@ -7,7 +7,7 @@
 
 //IE8 can't do transparent borders.
 //This defines what the default color for gutters is in IE.
-$gutter-ieFallback: $CG-bodyInnerBG;
+$gutter-ieFallback: $CG-body-bg;
 
 //You can alter the available grid gutter sizes here
 //usage: class="grid grid--gutter-moduleName"
