--- a/website/assets/sass/04-base-SASS/form-elements-SASS/00-common.scss
+++ b/website/assets/sass/04-base-SASS/form-elements-SASS/00-common.scss
@@ -1,8 +1,9 @@
 ﻿
-$errorClass: 'hasError';
-
 %inputStyling {
 	border: 1px solid $CG-input-border;
 	max-width: 100%;
 	padding: 5px 10px;
+	border-radius: 3px;
 }
+
+label { font-weight: $normal; }
