--- a/website/assets/sass/04-base-SASS/form-elements-SASS/selects.scss
+++ b/website/assets/sass/04-base-SASS/form-elements-SASS/selects.scss
@@ -1,6 +1,13 @@
 ﻿/********* Custom select boxes **********/
 
 $C-display-border: CG-prominence(1);
+$C-display-bg: #fff;
+$C-display-text: $CG-body-text;
+
+$C-arrowBox-bg:  CG-prominence(1);
+$C-arrowBox-arrow: CG-prominence(1, 'text');
+
+$V-display-class: '.styledSelect__display-JSadded';
 
 %hoverState { background-color: $CG-input-focus; }
 
@@ -12,23 +19,40 @@ select {
 }
 
 .styledSelect {
-	&-JS {
+	&-JSadded {
 		@extend %inputStyling;
 		width: 100%;
 		padding: 0;
 		position: relative;
 		overflow: hidden;
-		background-color: #fff;
 		cursor: pointer;
+		background-color: $C-display-bg;
 		z-index: 0;
 		padding-right: 30px;
+		border-radius: 3px;
 		@include MG-inline-block;
 
 		//add the arrow with a css triangle
-		@include MG-before {
-			@include MG-tri(down, CG-prominence(1), 7px);
+		@include MG-after {
+			//@include MG-tri(down, CG-prominence(1), 7px);
+			content: 'v';
+			font-size: 12px;
+			height: 12px;
+			width: 30px;
+			right: 0;
+			line-height: 0.8;
+			text-align: center;
+			color: $C-arrowBox-arrow;
 			@include MG-centered(v);
-			right: 11px;
+		}
+
+		@include MG-before {
+			background-color: $C-arrowBox-bg;
+			width: 30px;
+			position: absolute;
+			top: -1px;
+			bottom: -1px;
+			right: 0;
 		}
 
 		//adding arrow with an icon instead
@@ -46,10 +70,10 @@ select {
 			@include MG-opacity(0);
 			border: none!important;
 			z-index: 2;
-			&:focus + .styledSelect__display-JS { background: $CG-input-focus; }
+			&:focus + #{$V-display-class} { background: $CG-input-focus; }
 		}
 
-		&.#{$errorClass} {
+		&.#{$VG-errorClass} {
 			background: $CB-red-pale!important;
 			border-color: $CB-red-dim;
 			&:before {
@@ -57,24 +81,26 @@ select {
 				background-color: $CG-error-border;
 				color: $CG-error-bg;
 			}
-			.styledSelect__display-JS { color: $CG-error-text; }
+			#{$V-display-class} { color: $CG-error-text; background-color: $CG-error-bg; }
 
-			&:hover .styledSelect__display-JS,
-			select:hover + .styledSelect__display-JS  { background: $CG-error-bg--hover; }
+			&:hover #{$V-display-class},
+			select:hover + #{$V-display-class}  { background: $CG-error-bg--hover; }
 		}
 
-		&:hover .styledSelect__display-JS {
+		&:hover #{$V-display-class} {
 			@extend %hoverState;
 		}
 	}
 
-	&__display-JS {
+	&__display-JSadded {
 		@include MG-animate(0.25s,$attributes:background);
-		padding: 5px 0 5px 10px;
-		color: #000;
+		padding: 5px 10px 5px 10px;
+		color: $C-display-text;
+		background-color: $C-display-bg;
 		position: relative;
 		z-index: 0;
 		display: block;
-		border-right: 1px solid rgba($C-display-border,0.5);
+		background-color: $C-display-bg;
+		border-radius: 3px 0 0 3px;
 	}
 }
