--- a/prototype/assets/sass/04-base-SASS/video.scss
+++ b/prototype/assets/sass/04-base-SASS/video.scss
@@ -2,7 +2,7 @@
 html .video {
 	position: relative;
 	padding-top: 56.25%; //* 16:9, locks the video into the standard wide screen format */
-	padding-bottom: 25px;//* gives room for the player controls */
+	//padding-bottom: 25px;//* gives room for the player controls */
 	height: 0;
 
 	iframe, embed {
