--- a/prototype/assets/sass/04-base-SASS/form-elements-SASS/styledSelect.scss
+++ b/prototype/assets/sass/04-base-SASS/form-elements-SASS/styledSelect.scss
@@ -63,10 +63,12 @@ select {
 		}*/
 
 		select {
-			@extend %appearanceNone;
+			appearance: none;
 			width: 100%;
 			height: 100%;
 			position: absolute;
+			top: 0;
+			left: 0;
 			@include MG-opacity(0);
 			border: none!important;
 			z-index: 2;
