--- a/prototype/assets/sass/04-base-SASS/form-elements-SASS/styledBrowse.scss
+++ b/prototype/assets/sass/04-base-SASS/form-elements-SASS/styledBrowse.scss
@@ -29,8 +29,8 @@ $module: 'styledBrowse';
 					& + , & + .#{$module}__display-JSadded + {
 						.#{$module}__btn-JSadded {
 							//button hover state styles
-							background-color:$l-green;
-							color: #000;
+							background-color: CG-prominence(1, 'hover');
+							color:  CG-prominence(1, 'text');
 						}
 					}
 				}
@@ -39,13 +39,13 @@ $module: 'styledBrowse';
 	}
 
 	&__btn-JSadded {
+		@extend .btn;
 		display: inline-block;
 		vertical-align: middle;
 		position: relative;
 		overflow: hidden;
 		padding: 7px 40px;
 		border: 1px solid #000;
-		align-content: center;
 		text-decoration: none;
 		&:hover { text-decoration: none; }
 		&.error { color: $CG-error-text; background-color: $CG-error-bg; }
