--- a/prototype/assets/sass/04-base-SASS/responsiveVideo.scss
+++ b/prototype/assets/sass/04-base-SASS/responsiveVideo.scss
@@ -1,8 +1,8 @@
 
-html .video {
+.responsiveVideo {
 	position: relative;
 	padding-top: 56.25%; //* 16:9, locks the video into the standard wide screen format */
-	//padding-bottom: 25px;//* gives room for the player controls */
+	//padding-bottom: 25px;//* gives room for the player controls (no longer needed due to YouTube player design change) */
 	height: 0;
 
 	iframe, embed {
