Did some file renaming

--- a/prototype/00-source-files/01-sass/01-config-SASS/04-fonts-SASS/font-weights.scss
+++ b/prototype/00-source-files/01-sass/01-config-SASS/04-fonts-SASS/font-weights.scss
@@ -3,7 +3,7 @@ $thin: 100;
 $light: 300;
 $normal:  400;
 $medium: 500;
-$semi-bold: 600;
+$semi: 600;
 $bold:	700;
-$extra-bold: 800;
-$ultra-bold: 900;
+$extra: 800;
+$ultra: 900;
