--- a/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/output-files/modern.scss
+++ b/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/output-files/modern.scss
@@ -11,14 +11,12 @@
 $modern: true;
 $ie9: false;
 $ie8: false;
+$gt-ie10: true;
 $gt-ie8: true;
 $lt-ie10: false;
 $lt-ie9: false;
 
 //Global functions that extend SASS functionality
-@import "../import-maps/map-functions.scss";
+@import "../import-maps/configurations.scss";
 
-//all global and base variables go in the files listed in here
-@import "../import-maps/map-config.scss";
-
-@import "../01-import-styles.scss";
+@import "../import-maps/main-files.scss";
