--- a/prototype/00-source-files/01-sass/06-extras/ZZ-print.scss
+++ b/prototype/00-source-files/01-sass/06-extras/ZZ-print.scss
@@ -1,3 +1,4 @@
+@media print {
 
 /*================================================*\
 	PRINT STYLES
@@ -19,3 +20,5 @@ p,h2,h3{orphans:3;widows:3;}
 h2,h3{page-break-after:avoid;}
 
 .oldie * {box-sizing: content-box !important;}
+
+}
